# ClusterSim

./: .gitignore  .pre-commit-config.yaml  Procfile  README.md  graph2d_app.py  grid3d_app.py  grid3dfigure.py  pyproject.toml  requirements.txt  scalene-profile.json  shapes.csv  tasks.py  test copy.ipynb  test.ipynb
.github/workflows/: python-app.yml
analysis/: algorithms.py  analysis_funcs.py  generate_threshold.py  plotting.ipynb  plotting_script.py  shapes.csv  shapes0-0.13.csv  submission_script.py  test.ipynb
analysis/may2025/: submission_script.py
assets/: clientside.js  custom_style.css
docs/: conf.py  index.md
docs/api/: cluster_sim.app.rst  cluster_sim.rst  cluster_sim.simulator.rst  components.components_2d.rst  components.components_3d.rst  components.rst  modules.rst
src/: grid3dfigure.py
src/analysis/: 1cubes.py  analysis_funcs.py  app_funcs.py  connected_analysis.py  connected_unit_cells.ipynb  find_percolation.py  grid3d_noapp.py  path_percolation_C.ipynb  path_percolation_G.ipynb  plotting.ipynb  rhg_reconstruction_ratio.ipynb  test.ipynb  unit_cell.ipynb
src/assets/: bootstrap.css  style.css
src/cluster_sim/: __init__.py
src/cluster_sim/app/: __init__.py  grid.py  holes.py  layout.py  state.py  utils.py
src/cluster_sim/graph_state/: __init__.py  graph_state.py  lookup_tables.py  qubit_vertex.py
src/cluster_sim/plotting/: __init__.py  plotting.py
src/cluster_sim/simulator/: __init__.py  cluster_state.py
src/components/: __init__.py  algorithms.py  error_channel.py  figure.py  figure_2d.py  figure_3d.py  hover_data.py  load_graph.py  measurementbasis.py  move_log.py  plot_options.py  reset_graph.py  settings.py  stabilizer.py  tab_ui.py  zoom_data.py
src/components/components_2d/: __init__.py  action_panel.py  figure_2d.py  fusion_panel.py  move_log_2d.py
src/components/components_3d/: __init__.py  algorithms.py  error_channel.py  figure_3d.py  holes_rx.py  hover_data.py  load_graph.py  measurementbasis.py  move_log_3d.py  plot_options.py  reset_graph.py  zoom_data.py
src/examples/: find_percolation.py  find_percolationmp.py  grid3d_noapp.py
src/examples/graph_state/: ghz.py  random_state.py
src/static/: bootstrap.min.css
src/static/assets/: bootstrap.css
tests/: conftest.py  test_graph_state.py  test_plotting.py  test_simulator.py  test_stabilizers.py
