[project]
name = "cluster_sim"
version = "0.1.1"
description = "A measurement based quantum computing simulator."
authors = [{name = "Zhihua Han", email = "zhihuahan72@gmail.com"}]
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "dash",
    "dash_resizable_panels",
    "gunicorn",
    "dash-bootstrap-components",
    "jsonpickle",
    "networkx",
    "numpy",
    "matplotlib",
    "numba",
    "pytest>=9.0.2",
]

# ------------------------------------------------------------
# Pytest configuration
# ------------------------------------------------------------
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = [
    "-ra",            # show extra summary (skipped/xfailed/etc.)
    "--strict-markers"
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]
