[project]
name = "cluster-sim"
version = "0.1.1"
description = "A measurement based quantum computing simulator."
authors = [{name = "Zhihua Han", email = "zhihuahan72@gmail.com"}]
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "cluster-sim",
    "dash",
    "dash_resizable_panels",
    "gunicorn",
    "dash-bootstrap-components",
    "numpy",
    "matplotlib",
    "numba",
    "rustworkx>=0.17.1",
    "graphstatesim>=0.2.4",
    "jsons>=1.6.3",
    "networkx>=3.6.1",
    "dash-cytoscape>=1.0.2",
]

# ------------------------------------------------------------
# Pytest configuration
# ------------------------------------------------------------
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = [
    "-ra",            # show extra summary (skipped/xfailed/etc.)
    "--strict-markers"
]

[dependency-groups]
dev = [
    "furo>=2025.12.19",
    "hypothesis>=6.151.14",
    "invoke>=2.2.1",
    "prek>=0.3.3",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
    "stim>=1.15.0",
]
docs = [
    "myst-parser>=5.0.0",
    "sphinx>=9.1.0",
    "sphinx-copybutton",
    "sphinx-autodoc-typehints",
    "sphinx-autobuild",
    "nbsphinx>=0.9.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = ["pytest"]
